<resources>
    <string name="app_name">ExperimentOne</string>
    <string name="title_name">中山大学课外体育积分电子认证系统</string>
    <string name="alias">用户名:</string>
    <string name="aliashint">请输入用户名</string>
    <string name="password">密码:</string>
    <string name="passwordhint">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="group">社团</string>
    <string name="admin">管理者</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="imagedescription">sysu</string>
</resources>
